[package]
name = "another-visitor-macros"
version = "0.1.0"
authors = ["PieKing1215"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PieKing1215/another-visitor"
keywords = ["visitor", "derive", "macro"]
edition = "2021"

[lib]
proc_macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
